# shadertoy-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: seascape.frag
examples/elemental-ring/: elemental-ring.frag  main.rs
examples/seascape/: main.rs  seascape.frag
shaders/: default.frag  default.vert
src/: arg_values.rs  argvalues.rs  cli.yml  download.rs  error.rs  lib.rs  loader.rs  main.rs  net.rs  runner.rs
src/shaders/: default.frag
