[package]
name = "shadertoy-rs"
version = "0.4.4"
authors = ["Federico Menozzi <federicogmenozzi@gmail.com>"]
description = "A desktop client for Shadertoy written in Rust"
documentation = "https://github.com/fmenozzi/shadertoy-rs"
homepage = "https://github.com/fmenozzi/shadertoy-rs"
repository = "https://github.com/fmenozzi/shadertoy-rs"
readme = "README.md"
license = "MIT"
keywords = ["shadertoy", "graphics", "shaders"]
categories = ["rendering"]

[dependencies]
gfx = "0.17"
gfx_window_glutin = "0.21"
glutin = "0.13"
clap = { version = "2.23.2", features = ["yaml"] }
image = "0.13"
log = "0.3"
env_logger = "0.3"
serde_json = "1.0"
reqwest = "0.8"
clippy = { version = "0.*", optional = true }
failure = "0.1.1"
failure_derive = "0.1.1"

[[bin]]
path = "src/main.rs"
name = "shadertoy"
