[package]
name = "shadertoy-rs"
version = "0.4.4"
authors = ["Federico Menozzi <federicogmenozzi@gmail.com>"]
description = "A desktop client for Shadertoy written in Rust"
documentation = "https://github.com/fmenozzi/shadertoy-rs"
homepage = "https://github.com/fmenozzi/shadertoy-rs"
repository = "https://github.com/fmenozzi/shadertoy-rs"
readme = "README.md"
license = "MIT"
keywords = ["shadertoy", "graphics", "shaders"]
categories = ["rendering"]

[dependencies]
gfx = "0.18.2"
gfx_device_gl="0.16.2"
gfx_window_glutin = "0.31.0"
glutin = "0.27.0"
old_school_gfx_glutin_ext="0.27.0"
clap = { version = "2.23.2", features = ["yaml"] }
image = "0.13"
log = "0.3"
env_logger = "0.3"
serde_json = "1.0"
notify = "4.0.3"
reqwest = "~0.9"
clippy = { version = "0.*", optional = true }
failure = "0.1.8"
failure_derive = "0.1.8"

[[bin]]
path = "src/main.rs"
name = "shadertoy"
